[package]
name = "applauncher"
version = "0.1.1"
authors = ["Starz0r"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iui = { version = "0.3.0" }
eyre = "0.6.2"
native-dialog = "0.4.3"
toml = "0.5.7"
directories-next = "2.0.0"
serde = "1.0.117"
crossbeam = "0.8.0"
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
lazy_static = "1.4.0"
crc32c = "0.5.0"
scopeguard = "1.1.0"
octocrab = "0.8.1"
semver = "0.11.0"
tokio = { version = "0.2.23", features = ["macros", "net", "io-util", "rt-core", "rt-util", "rt-threaded"] }